--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -301,7 +301,7 @@
   "console.views.device-add.messages.appTitle": "Xxxxxxxxxxx xxxxx xxxxxxxx",
   "console.views.device-add.messages.appDescription": "Xxxxxxxxxxx xxxxxxx xxx xx xxxxxxx/xxxxxxx XxXxXXX xxxxxxx.",
   "console.views.device-add.messages.joinTitle": "Xxxx xxxxxxxx",
-  "console.views.device-add.messages.joinDescription": "Xxxx xxxx, xxx XX xxx xxx xxxxxx.",
+  "console.views.device-add.messages.joinDescription": "Xxxx xxxx, XxxXX xxx xxx xxxxxx.",
   "console.views.device-add.wizard.prompt.index.modalTitle": "Xxxxxxx xxxxxxxxxx",
   "console.views.device-add.wizard.prompt.index.modalMessage": "Xxx xxx xxxx xxx xxxx xx xxxxx xxxx xxxx xxx xxxxx xxx xxx xxxxxx xxxxxxxx? Xxxxx xxx xxxxxxx xxxxxxx xxxx xxxx xx xxxx.",
   "console.views.device-add.wizard.prompt.index.modalApproveText": "Xxxxxxx xxxxxxxxxx",
