--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -183,6 +183,7 @@
   "console.containers.application-payload-formatters.uplink.infoText": "Xxxxx xxxxxxx xxxxxxxxxx xxx xxxxxxxx xx xxxxxx xxxxxxxx xxxx xxx xxx xxxxxxx xx xxxx xxxxxxxxxxx. Xxxx: xxx xxxxxx xxxxx xxxxxxx xxxxxxxxxx xxxx xxxxxxxxxx.",
   "console.containers.applications-table.index.ownedTabTitle": "Xxxxx xxxxxxxxxxxx",
   "console.containers.collaborators-table.index.id": "Xxxx / Xxxxxxxxxxxx XX",
+  "console.containers.collaborators-table.index.currentUserIndicator": "(Xxxx xx xxx)",
   "console.containers.dev-addr-input.dev-addr-input.generate": "Xxxxxxxx xxx xxxxxx xxxxxxx",
   "console.containers.dev-addr-input.index.devAddrFetchingFailure": "Xxxxx xxx xx xxxxx xxx xxx xxx xxxxxx xxxxxxx xxxxx xxx xx xxxxxxxxx",
   "console.containers.device-importer.index.proceed": "Xxxxxxx",
