dev: Add messages

--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -1,4 +1,6 @@
 {
+  "components.collapse.index.collapse": "Xxxxxxxx",
+  "components.collapse.index.expand": "Xxxxxx",
   "components.data-sheet.index.noData": "Xx xxxx xxxxxxxxx",
   "components.error-notification.story.problem": "Xx xxx x xxxxxxx xxxx!",
   "components.error-notification.story.lengthyProblem": "Xx xxx x xxxxxxx xxxx! Xxx xxx xxxxxxxxxxx xx xxxxx xxxxxxx xx xxxx, xxxxx xxx xxxxxxxxx xx x xxxxxxx.",
@@ -77,21 +79,6 @@
   "console.components.events.messages.seeAllActivity": "Xxx xxx xxxxxxxx",
   "console.components.events.messages.syntheticEvent": "Xxxx: Xxxx xxxx xxxxx xxx xxx xxxxxxxxx xxxx xxx xxxxx xxxxxx",
   "console.components.events.previews.shared.json-payload.index.invalid": "Xxxxxxx XXXX",
-  "console.components.gateway-data-form.index.enforced": "Xxxxxxxx",
-  "console.components.gateway-data-form.index.dutyCycle": "Xxxx xxxxx",
-  "console.components.gateway-data-form.index.gatewayIdPlaceholder": "xx-xxx-xxxxxxx",
-  "console.components.gateway-data-form.index.gatewayNamePlaceholder": "Xx xxx xxxxxxx",
-  "console.components.gateway-data-form.index.gsServerAddressDescription": "Xxx xxxxxxx xx xxx Xxxxxxx Xxxxxx xx xxxxxxx xx",
-  "console.components.gateway-data-form.index.gatewayDescPlaceholder": "Xxxxxxxxxxx xxx xx xxx xxxxxxx",
-  "console.components.gateway-data-form.index.gatewayDescDescription": "Xxxxxxxx xxxxxxx xxxxxxxxxxx; xxx xxxx xx xxxx xx xxxx xxxxx xxxxx xxx xxxxxxx",
-  "console.components.gateway-data-form.index.statusDescription": "Xxx xxxxxx xx xxxx xxxxxxx xxx xx xxxxxxxx xxxxxxxxx",
-  "console.components.gateway-data-form.index.scheduleDownlinkLateDescription": "Xxxxxx xxxxxx-xxxx xxxxxx xx xxxxxxxx xxxxxxxx",
-  "console.components.gateway-data-form.index.autoUpdateDescription": "Xxxxxxx xxx xx xxxxxxx xxxxxxxxxxxxx",
-  "console.components.gateway-data-form.index.updateChannelDescription": "Xxxxxxx xxx xxxxxxx xxxxxxxxx xxxxxxx",
-  "console.components.gateway-data-form.index.enforceDutyCycleDescription": "Xxxxxxxxxxx xxx xxx xxxxxxxx xx xxxxx xx xxxxxxx xxxxxxxx xxxxxxxxxxx",
-  "console.components.gateway-data-form.index.scheduleAnyTimeDelay": "Xxxxxxxx xxx xxxx xxxxx",
-  "console.components.gateway-data-form.index.scheduleAnyTimeDescription": "Xxxxxxxxx xxxxxxx xxxxx (xxxxxxx: {minimumValue}xx, xxxxxxx: {defaultValue}xx)",
-  "console.components.gateway-data-form.index.delayWarning": "Xxxxx xxx xxxxx. Xxx xxxxx xxxxx ({minimumValue}xx) xxxx xx xxxx xx xxx Xxxxxxx Xxxxxx.",
   "console.components.join-eui-prefixes-input.index.empty": "Xx xxxxxx",
   "console.components.join-eui-prefixes-input.index.zeroInput": "Xxxx xxxx xxxxx",
   "console.components.location-form.index.deleteWarning": "Xxx xxx xxxx xxx xxxx xx xxxxxx xxxx xxxxxxxx xxxxx?",
@@ -326,8 +313,6 @@
   "console.views.device-claim-authentication-code.index.deleteSuccess": "Xxxxx xxxxxxxxxxxxxx xxxxxxx",
   "console.views.device-claim-authentication-code.index.updateSuccess": "Xxxxx xxxxxxxxxxxxxx xxxxxxx",
   "console.views.device-claim-authentication-code.index.validateCode": "Xxxxx xxxxxxxxxxxxxx xxxx xxxx xxxxxxx xxxx xx xxxxxxx xxx xxxxxxx",
-  "console.views.device-general-settings.collapse.index.collapse": "Xxxxxxxx",
-  "console.views.device-general-settings.collapse.index.expand": "Xxxxxx",
   "console.views.device-general-settings.identity-server-form.index.deleteDevice": "Xxxxxx xxx xxxxxx",
   "console.views.device-general-settings.identity-server-form.index.deleteWarning": "Xxx xxx xxxx xxx xxxx xx xxxxxx \"{deviceId}\"? Xxxx xxxxxx xxxxxx xx xxxxxx xxx xx xxxx xxx xx xxxxxxxx xx xxxxx xxx xxx xxxxxx XX.",
   "console.views.device-general-settings.messages.isTitle": "Xxxxx",
@@ -363,9 +348,15 @@
   "console.views.device-payload-formatters.index.infoDownlinkText": "Xxxxx xxxxxxx xxxxxxxxxx xxx xxxxxxxx xx xxxxxxxx xxxxxxxx xx xxxx xxx xxxxxx xxx xxxx xxxxxxxxxx xxxx xxxxxxxxxxx xxxxx xxxxxxx xxxxxxxxxx.",
   "console.views.gateway-add.index.createGateway": "Xxxxxx xxxxxxx",
   "console.views.gateway-data.index.gtwData": "Xxxxxxx xxxx",
-  "console.views.gateway-general-settings.index.updateSuccess": "Xxxxxxx xxxxxxx",
-  "console.views.gateway-general-settings.index.deleteGateway": "Xxxxxx xxxxxxx",
-  "console.views.gateway-general-settings.index.modalWarning": "Xxx xxx xxxx xxx xxxx xx xxxxxx \"{gtwName}\"? Xxxx xxxxxx xxxxxx xx xxxxxx xxx xx xxxx xxx xx xxxxxxxx xx xxxxx xxx xxxxxxx XX.",
+  "console.views.gateway-general-settings.messages.basicTitle": "Xxxxx xxxxxxxx",
+  "console.views.gateway-general-settings.messages.basicDescription": "Xxxxxxx xxxxxxxx, xxxxxxx xxxxxxx xxx xxxxxxxx",
+  "console.views.gateway-general-settings.messages.lorawanTitle": "XxXxXXX xxxxxxx",
+  "console.views.gateway-general-settings.messages.lorawanDescription": "XxXxXXX xxxxxxx-xxxxx xxxxxxxx",
+  "console.views.gateway-general-settings.messages.updateSuccess": "Xxxxxxx xxxxxxx",
+  "console.views.gateway-general-settings.messages.deleteSuccess": "Xxxxxxx xxxxxxx",
+  "console.views.gateway-general-settings.messages.deleteFailure": "Xxxxxxx xxxxxx xxxxx",
+  "console.views.gateway-general-settings.messages.deleteGateway": "Xxxxxx xxxxxxx",
+  "console.views.gateway-general-settings.messages.modalWarning": "Xxx xxx xxxx xxx xxxx xx xxxxxx \"{gtwName}\"? Xxxx xxxxxx xxxxxx xx xxxxxx xxx xx xxxx xxx xx xxxxxxxx xx xxxxx xxx xxxxxxx XX.",
   "console.views.gateway-overview.gateway-overview.downloadGlobalConf": "Xxxxxxxx xxxxxx_xxxx.xxxx",
   "console.views.gateway-overview.gateway-overview.globalConf": "Xxxxxx xxxxxxxxxxxxx",
   "console.views.gateway-overview.gateway-overview.globalConfFailed": "Xxxxxx xx xxxxxxxx xxxxxx_xxxx.xxxx",
@@ -468,6 +459,7 @@
   "lib.shared-messages.attributes": "Xxxxxxxxxx",
   "lib.shared-messages.attributesValidateRequired": "Xxx xxxxxxxxx xxxxx xxxxxx xxx xxxxxxxx. Xxxxxx xxxxxx xxxxx xxxxxxx.",
   "lib.shared-messages.automaticUpdates": "Xxxxxxxxx xxxxxxx",
+  "lib.shared-messages.autoUpdateDescription": "Xxxxxxx xxx xx xxxxxxx xxxxxxxxxxxxx",
   "lib.shared-messages.backToOverview": "Xxxx xx xxxxxxxx",
   "lib.shared-messages.brand": "Xxxxx",
   "lib.shared-messages.cancel": "Xxxxxx",
@@ -504,6 +496,7 @@
   "lib.shared-messages.currentCollaborators": "Xxxxxxx xxxxxxxxxxxxx",
   "lib.shared-messages.data": "Xxxx",
   "lib.shared-messages.defineRights": "Xxxxxx xxxxxx",
+  "lib.shared-messages.delayWarning": "Xxxxx xxx xxxxx. Xxx xxxxx xxxxx ({minimumValue}xx) xxxx xx xxxx xx xxx Xxxxxxx Xxxxxx.",
   "lib.shared-messages.description": "Xxxxxxxxxxx",
   "lib.shared-messages.devAddr": "Xxxxxx xxxxxxx",
   "lib.shared-messages.devDesc": "Xxx xxxxxx xxxxxxxxxxx",
@@ -531,11 +524,14 @@
   "lib.shared-messages.downlinkReplace": "Xxxxxxxx xxxxxxx",
   "lib.shared-messages.downlinkSent": "Xxxxxxxx xxxx",
   "lib.shared-messages.downlinksScheduled": "Xxxxxxxxx (xx)xxxxxxxxx",
+  "lib.shared-messages.dutyCycle": "Xxxx xxxxx",
   "lib.shared-messages.edit": "Xxxx",
   "lib.shared-messages.email": "Xxxxx",
   "lib.shared-messages.emailAddress": "Xxxxx xxxxxxx",
   "lib.shared-messages.empty": "Xxxxx",
   "lib.shared-messages.enabled": "Xxxxxxx",
+  "lib.shared-messages.enforced": "Xxxxxxxx",
+  "lib.shared-messages.enforceDutyCycleDescription": "Xxxxxxxxxxx xxx xxx xxxxxxxx xx xxxxx xx xxxxxxx xxxxxxxx xxxxxxxxxxx",
   "lib.shared-messages.entityId": "Xxxxxx XX",
   "lib.shared-messages.eventsCannotShow": "Xxxxxx xxxx xxxxxx",
   "lib.shared-messages.external": "Xxxxxxxx",
@@ -547,11 +543,15 @@
   "lib.shared-messages.frameCounterWidth": "Xxxxx xxxxxxx xxxxx",
   "lib.shared-messages.frequencyPlan": "Xxxxxxxxx xxxx",
   "lib.shared-messages.gateway": "Xxxxxxx",
+  "lib.shared-messages.gatewayDescDescription": "Xxxxxxxx xxxxxxx xxxxxxxxxxx; xxx xxxx xx xxxx xx xxxx xxxxx xxxxx xxx xxxxxxx",
+  "lib.shared-messages.gatewayDescPlaceholder": "Xxxxxxxxxxx xxx xx xxx xxxxxxx",
   "lib.shared-messages.gatewayDescription": "Xxxxxxx xxxxxxxxxxx",
   "lib.shared-messages.gatewayEUI": "Xxxxxxx XXX",
   "lib.shared-messages.gatewayID": "Xxxxxxx XX",
+  "lib.shared-messages.gatewayIdPlaceholder": "xx-xxx-xxxxxxx",
   "lib.shared-messages.gatewayLocation": "Xxxxxxx xxxxxxxx",
-  "lib.shared-messages.gatewayName": "Xxxxxxx Xxxx",
+  "lib.shared-messages.gatewayName": "Xxxxxxx xxxx",
+  "lib.shared-messages.gatewayNamePlaceholder": "Xx xxx xxxxxxx",
   "lib.shared-messages.gateways": "Xxxxxxxx",
   "lib.shared-messages.gatewayScheduleDownlinkLate": "Xxxxxxxx xxxxxxxx xxxx",
   "lib.shared-messages.gatewayServerAddress": "Xxxxxxx Xxxxxx xxxxxxx",
@@ -560,6 +560,7 @@
   "lib.shared-messages.general": "Xxxxxxx",
   "lib.shared-messages.generalInformation": "Xxxxxxx xxxxxxxxxxx",
   "lib.shared-messages.generalSettings": "Xxxxxxx xxxxxxxx",
+  "lib.shared-messages.gsServerAddressDescription": "Xxx xxxxxxx xx xxx Xxxxxxx Xxxxxx xx xxxxxxx xx",
   "lib.shared-messages.hardware": "Xxxxxxxx",
   "lib.shared-messages.hardwareVersion": "Xxxxxxxx xxxxxxx",
   "lib.shared-messages.homeNetID": "Xxxx XxxXX",
@@ -665,6 +666,9 @@
   "lib.shared-messages.rights": "Xxxxxx",
   "lib.shared-messages.rootKeys": "Xxxx xxxx",
   "lib.shared-messages.saveChanges": "Xxxx xxxxxxx",
+  "lib.shared-messages.scheduleAnyTimeDelay": "Xxxxxxxx xxx xxxx xxxxx",
+  "lib.shared-messages.scheduleAnyTimeDescription": "Xxxxxxxxx xxxxxxx xxxxx (xxxxxxx: {minimumValue}xx, xxxxxxx: {defaultValue}xx)",
+  "lib.shared-messages.scheduleDownlinkLateDescription": "Xxxxxx xxxxxx-xxxx xxxxxx xx xxxxxxxx xxxxxxxx",
   "lib.shared-messages.searchById": "Xxxxxx xx XX",
   "lib.shared-messages.seconds": "xxxxxxx",
   "lib.shared-messages.secure": "Xxxxxx",
@@ -683,6 +687,7 @@
   "lib.shared-messages.stateRequested": "Xxxxxxxxx",
   "lib.shared-messages.stateSuspended": "Xxxxxxxxx",
   "lib.shared-messages.status": "Xxxxxx",
+  "lib.shared-messages.statusDescription": "Xxx xxxxxx xx xxxx xxxxxxx xxx xx xxxxxxxx xxxxxxxxx",
   "lib.shared-messages.statusUnknown": "Xxxxxx xxxxxxx",
   "lib.shared-messages.success": "Xxxxxxx",
   "lib.shared-messages.supportsClassC": "Xxxxxxxx xxxxx X",
@@ -692,6 +697,7 @@
   "lib.shared-messages.traffic": "Xxxxxxx",
   "lib.shared-messages.type": "Xxxx",
   "lib.shared-messages.unknown": "Xxxxxxx",
+  "lib.shared-messages.updateChannelDescription": "Xxxxxxx xxx xxxxxxx xxxxxxxxx xxxxxxx",
   "lib.shared-messages.updatedAt": "Xxxx xxxxxxx xx",
   "lib.shared-messages.uplink": "Xxxxxx",
   "lib.shared-messages.uplinkFrameCount": "Xxxxxx xxxxx xxxxx",
