console: Support configuring downlink queue invalidated messages

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -519,9 +519,10 @@
   "lib.shared-messages.downlinkAck": "Downlink ack",
   "lib.shared-messages.downlinkFailed": "Downlink failed",
   "lib.shared-messages.downlinkFrameCount": "Downlink frame count",
-  "lib.shared-messages.downlinkNack": "Downlink Nack",
+  "lib.shared-messages.downlinkNack": "Downlink nack",
   "lib.shared-messages.downlinkPush": "Downlink push",
   "lib.shared-messages.downlinkQueued": "Downlink queued",
+  "lib.shared-messages.downlinkQueueInvalidated": "Downlink queue invalidated",
   "lib.shared-messages.downlinkReplace": "Downlink replace",
   "lib.shared-messages.downlinkSent": "Downlink sent",
   "lib.shared-messages.downlinksScheduled": "Downlinks (re)scheduled",
