--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -519,9 +519,10 @@
   "lib.shared-messages.downlinkAck": "Xxxxxxxx xxx",
   "lib.shared-messages.downlinkFailed": "Xxxxxxxx xxxxxx",
   "lib.shared-messages.downlinkFrameCount": "Xxxxxxxx xxxxx xxxxx",
-  "lib.shared-messages.downlinkNack": "Xxxxxxxx Xxxx",
+  "lib.shared-messages.downlinkNack": "Xxxxxxxx xxxx",
   "lib.shared-messages.downlinkPush": "Xxxxxxxx xxxx",
   "lib.shared-messages.downlinkQueued": "Xxxxxxxx xxxxxx",
+  "lib.shared-messages.downlinkQueueInvalidated": "Xxxxxxxx xxxxx xxxxxxxxxxx",
   "lib.shared-messages.downlinkReplace": "Xxxxxxxx xxxxxxx",
   "lib.shared-messages.downlinkSent": "Xxxxxxxx xxxx",
   "lib.shared-messages.downlinksScheduled": "Xxxxxxxxx (xx)xxxxxxxxx",
