console: Added hint to user entries

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -170,7 +170,6 @@
   "console.containers.application-payload-formatters.uplink.infoText": "These payload formatters are executed on uplink messages from all end devices in this application. Note: end device level payload formatters have precedence.",
   "console.containers.applications-table.index.ownedTabTitle": "Owned applications",
   "console.containers.collaborators-table.index.id": "User / Organization ID",
-  "console.containers.collaborators-table.index.currentUserIndicator": "(This is you)",
   "console.containers.dev-addr-input.dev-addr-input.generate": "Generate end device address",
   "console.containers.dev-addr-input.index.devAddrFetchingFailure": "There was an error and the end device address could not be generated",
   "console.containers.device-importer.index.proceed": "Proceed",
@@ -495,6 +494,7 @@
   "lib.shared-messages.created": "Created",
   "lib.shared-messages.createdAt": "Created at",
   "lib.shared-messages.currentCollaborators": "Current collaborators",
+  "lib.shared-messages.currentUserIndicator": "(This is you)",
   "lib.shared-messages.data": "Data",
   "lib.shared-messages.defineRights": "Define rights",
   "lib.shared-messages.delayWarning": "Delay too short. The lower bound ({minimumValue}ms) will be used by the Gateway Server.",
