--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -170,7 +170,6 @@
   "console.containers.application-payload-formatters.uplink.infoText": "Xxxxx xxxxxxx xxxxxxxxxx xxx xxxxxxxx xx xxxxxx xxxxxxxx xxxx xxx xxx xxxxxxx xx xxxx xxxxxxxxxxx. Xxxx: xxx xxxxxx xxxxx xxxxxxx xxxxxxxxxx xxxx xxxxxxxxxx.",
   "console.containers.applications-table.index.ownedTabTitle": "Xxxxx xxxxxxxxxxxx",
   "console.containers.collaborators-table.index.id": "Xxxx / Xxxxxxxxxxxx XX",
-  "console.containers.collaborators-table.index.currentUserIndicator": "(Xxxx xx xxx)",
   "console.containers.dev-addr-input.dev-addr-input.generate": "Xxxxxxxx xxx xxxxxx xxxxxxx",
   "console.containers.dev-addr-input.index.devAddrFetchingFailure": "Xxxxx xxx xx xxxxx xxx xxx xxx xxxxxx xxxxxxx xxxxx xxx xx xxxxxxxxx",
   "console.containers.device-importer.index.proceed": "Xxxxxxx",
@@ -495,6 +494,7 @@
   "lib.shared-messages.created": "Xxxxxxx",
   "lib.shared-messages.createdAt": "Xxxxxxx xx",
   "lib.shared-messages.currentCollaborators": "Xxxxxxx xxxxxxxxxxxxx",
+  "lib.shared-messages.currentUserIndicator": "(Xxxx xx xxx)",
   "lib.shared-messages.data": "Xxxx",
   "lib.shared-messages.defineRights": "Xxxxxx xxxxxx",
   "lib.shared-messages.delayWarning": "Xxxxx xxx xxxxx. Xxx xxxxx xxxxx ({minimumValue}xx) xxxx xx xxxx xx xxx Xxxxxxx Xxxxxx.",
