dev: Update locales

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -534,7 +534,6 @@
   "lib.shared-messages.devEUI": "DevEUI",
   "lib.shared-messages.deviceAddrDescription": "Device address, issued by the Network Server or chosen by device manufacturer in case of testing range",
   "lib.shared-messages.deviceCounted": "{count, plural, one {End device} other {End devices}}",
-  "lib.shared-messages.deviceClass": "End device class",
   "lib.shared-messages.deviceDescDescription": "Optional end device description; can also be used to save notes about the end device",
   "lib.shared-messages.deviceDescPlaceholder": "Description for my new end device",
   "lib.shared-messages.deviceEUIDescription": "The DevEUI is the unique identifier for this end device",
@@ -624,6 +623,7 @@
   "lib.shared-messages.longitude": "Longitude",
   "lib.shared-messages.longitudeDesc": "The east-west position in degrees, where 0 is the prime meridian (Greenwich)",
   "lib.shared-messages.loraCloud": "LoRa Cloud",
+  "lib.shared-messages.lorawanClassCapabilities": "LoRaWAN class capabilities",
   "lib.shared-messages.lorawanInformation": "LoRaWAN information",
   "lib.shared-messages.lorawanOptions": "LoRaWAN options",
   "lib.shared-messages.lorawanPhyVersionDescription": "The LoRaWAN PHY version of the end device",
