--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -534,7 +534,6 @@
   "lib.shared-messages.devEUI": "XxxXXX",
   "lib.shared-messages.deviceAddrDescription": "Xxxxxx xxxxxxx, xxxxxx xx xxx Xxxxxxx Xxxxxx xx xxxxxx xx xxxxxx xxxxxxxxxxxx xx xxxx xx xxxxxxx xxxxx",
   "lib.shared-messages.deviceCounted": "{count, plural, =one {Xxx xxxxxx} other {Xxx xxxxxxx}}",
-  "lib.shared-messages.deviceClass": "Xxx xxxxxx xxxxx",
   "lib.shared-messages.deviceDescDescription": "Xxxxxxxx xxx xxxxxx xxxxxxxxxxx; xxx xxxx xx xxxx xx xxxx xxxxx xxxxx xxx xxx xxxxxx",
   "lib.shared-messages.deviceDescPlaceholder": "Xxxxxxxxxxx xxx xx xxx xxx xxxxxx",
   "lib.shared-messages.deviceEUIDescription": "Xxx XxxXXX xx xxx xxxxxx xxxxxxxxxx xxx xxxx xxx xxxxxx",
@@ -624,6 +623,7 @@
   "lib.shared-messages.longitude": "Xxxxxxxxx",
   "lib.shared-messages.longitudeDesc": "Xxx xxxx-xxxx xxxxxxxx xx xxxxxxx, xxxxx x xx xxx xxxxx xxxxxxxx (Xxxxxxxxx)",
   "lib.shared-messages.loraCloud": "XxXx Xxxxx",
+  "lib.shared-messages.lorawanClassCapabilities": "XxXxXXX xxxxx xxxxxxxxxxxx",
   "lib.shared-messages.lorawanInformation": "XxXxXXX xxxxxxxxxxx",
   "lib.shared-messages.lorawanOptions": "XxXxXXX xxxxxxx",
   "lib.shared-messages.lorawanPhyVersionDescription": "Xxx XxXxXXX XXX xxxxxxx xx xxx xxx xxxxxx",
