console: Add password validation to user management

--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -150,6 +150,9 @@
   "console.components.user-data-form.index.emailPlaceholder": "xxxx@xxxxxxx.xxx",
   "console.components.user-data-form.index.emailAddressDescription": "Xxxxxxx xxxxx xxxxxxx xxxx xxx xxxxxxx xx; xxxx xxxxxxx xx xxx xxxxxxxx xxxxxxx",
   "console.components.user-data-form.index.modalWarning": "Xxx xxx xxxx xxx xxxx xx xxxxxx xxx xxxx \"{userId}\". Xxxx xxxxxx xxxxxx xx xxxxxx xxx xx xxxx xxx xx xxxxxxxx xx xxxxx xxx xxxx XX.",
+  "console.components.user-data-form.index.validateSpecial": "{field} xxxx xxxx xx xxxxx {special} xxxxxxx {special, plural, =one {xxxxxxxxx} other {xxxxxxxxxx}}",
+  "console.components.user-data-form.index.validateUppercase": "{field} xxxx xxxx xx xxxxx {upper} xxxxxxxxx {upper, plural, =one {xxxxxxxxx} other {xxxxxxxxxx}}",
+  "console.components.user-data-form.index.validateDigit": "{field} xxxx xxxx xx xxxxx {digit} {digit, plural, =one {xxxxx} other {xxxxxx}}",
   "console.components.webhook-form.index.idPlaceholder": "xx-xxx-xxxxxxx",
   "console.components.webhook-form.index.messageInfo": "Xxx xxxx xxxxxxx xxxxxxx xxxx, xx xxxxxxxx xxxx xxx xx xxxxxxx xxxxx xxxx xx xxxxxxxx xx xxx xxxx XXX",
   "console.components.webhook-form.index.deleteWebhook": "Xxxxxx Xxxxxxx",
