dev: Update locales

--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -61,7 +61,8 @@
   "console.components.downlink-form.downlink-form.scheduleDownlink": "Xxxxxxxx xxxxxxxx",
   "console.components.downlink-form.downlink-form.downlinkSuccess": "Xxxxxxxx xxxxxxxxx",
   "console.components.downlink-form.downlink-form.payloadDescription": "Xxx xxxxxxx xxxxxxx xxxxx xx xxx xxxxxxxx xxxxxxx",
-  "console.components.events.messages.frmPayload": "XXXXxxxxxx",
+  "console.components.events.messages.payload": "Xxxxxxx",
+  "console.components.events.messages.MACPayload": "XXX xxxxxxx",
   "console.components.events.messages.devAddr": "XxxXxxx",
   "console.components.events.messages.fPort": "XXxxx",
   "console.components.events.messages.fCnt": "XXxx",
@@ -73,6 +74,7 @@
   "console.components.events.messages.snr": "XXX",
   "console.components.events.messages.sessionKeyId": "Xxxxxxx xxx XX",
   "console.components.events.messages.selectedMacVersion": "Xxxxxxxx XXX xxxxxxx",
+  "console.components.events.messages.rx1Delay": "Xxx Xxxxx",
   "console.components.events.messages.eventDetails": "Xxxxx xxxxxxx",
   "console.components.events.messages.errorOverviewEntry": "Xxxxx xxx xx xxxxx xxx xxx xxxxx xxxxxx xx xxxxxxxxx. Xxx xxx xxxxx xxx xx xxxxxx xx xxxxxxxx xxxx xxx.",
   "console.components.events.messages.dataPreview": "Xxxx xxxxxxx",
