--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -61,7 +61,8 @@
   "console.components.downlink-form.downlink-form.scheduleDownlink": "Schedule downlink",
   "console.components.downlink-form.downlink-form.downlinkSuccess": "Downlink scheduled",
   "console.components.downlink-form.downlink-form.payloadDescription": "The desired payload bytes of the downlink message",
-  "console.components.events.messages.frmPayload": "FRMPayload",
+  "console.components.events.messages.payload": "Payload",
+  "console.components.events.messages.MACPayload": "MAC payload",
   "console.components.events.messages.devAddr": "DevAddr",
   "console.components.events.messages.fPort": "FPort",
   "console.components.events.messages.fCnt": "FCnt",
@@ -73,6 +74,7 @@
   "console.components.events.messages.snr": "SNR",
   "console.components.events.messages.sessionKeyId": "Session key ID",
   "console.components.events.messages.selectedMacVersion": "Selected MAC version",
+  "console.components.events.messages.rx1Delay": "Rx1 Delay",
   "console.components.events.messages.eventDetails": "Event details",
   "console.components.events.messages.errorOverviewEntry": "There was an error and the event cannot be displayed. The raw event can by viewed by clicking this row.",
   "console.components.events.messages.dataPreview": "Data preview",
