--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -653,6 +653,7 @@
   "lib.shared-messages.payloadFormattersUpdateFailure": "There was an error updating the payload formatter",
   "lib.shared-messages.payloadFormattersUpdateSuccess": "Payload formatter updated",
   "lib.shared-messages.payloadFormattersUplink": "Uplink payload formatters",
+  "lib.shared-messages.personalApiKeys": "Personal API keys",
   "lib.shared-messages.phyVersion": "Regional Parameters version",
   "lib.shared-messages.phyVersionDescription": "The Regional Parameters version (PHY), as provided by the device manufacturer",
   "lib.shared-messages.port": "Port",
