--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -653,6 +653,7 @@
   "lib.shared-messages.payloadFormattersUpdateFailure": "Xxxxx xxx xx xxxxx xxxxxxxx xxx xxxxxxx xxxxxxxxx",
   "lib.shared-messages.payloadFormattersUpdateSuccess": "Xxxxxxx xxxxxxxxx xxxxxxx",
   "lib.shared-messages.payloadFormattersUplink": "Xxxxxx xxxxxxx xxxxxxxxxx",
+  "lib.shared-messages.personalApiKeys": "Xxxxxxxx XXX xxxx",
   "lib.shared-messages.phyVersion": "Xxxxxxxx Xxxxxxxxxx xxxxxxx",
   "lib.shared-messages.phyVersionDescription": "Xxx Xxxxxxxx Xxxxxxxxxx xxxxxxx (XXX), xx xxxxxxxx xx xxx xxxxxx xxxxxxxxxxxx",
   "lib.shared-messages.port": "Xxxx",
