dev: Update locales

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -51,14 +51,13 @@
   "console.components.device-import-form.index.createDevices": "Create end devices",
   "console.components.device-import-form.index.selectAFile": "Please select a template file",
   "console.components.device-import-form.index.fileInfoPlaceholder": "Please select a template format",
-  "console.components.device-import-form.index.claimAuthCode": "Set claim authentication code",
+  "console.components.device-import-form.index.claiming": "Claiming",
+  "console.components.device-import-form.index.setClaimAuthCode": "Set claim authentication code",
   "console.components.device-import-form.index.targetedComponents": "Targeted components",
   "console.components.downlink-form.downlink-form.insertMode": "Insert Mode",
-  "console.components.downlink-form.downlink-form.insertModeDescription": "Messages can either replace the downlink queue or append to it",
-  "console.components.downlink-form.downlink-form.replace": "Replace",
-  "console.components.downlink-form.downlink-form.push": "Push",
-  "console.components.downlink-form.downlink-form.confirmation": "Confirmation",
-  "console.components.downlink-form.downlink-form.confirmed": "Confirmed",
+  "console.components.downlink-form.downlink-form.replace": "Replace downlink queue",
+  "console.components.downlink-form.downlink-form.push": "Push to downlink queue (append)",
+  "console.components.downlink-form.downlink-form.confirmedDownlink": "Confirmed downlink",
   "console.components.downlink-form.downlink-form.scheduleDownlink": "Schedule downlink",
   "console.components.downlink-form.downlink-form.downlinkSuccess": "Downlink scheduled",
   "console.components.downlink-form.downlink-form.payloadDescription": "The desired payload bytes of the downlink message",
@@ -156,6 +155,7 @@
   "console.components.pubsub-form.messages.alreadyExistsModalTitle": "ID already exists",
   "console.components.pubsub-form.messages.alreadyExistsModalMessage": "A Pub/Sub with the ID \"{id}\" already exists. Do you wish to replace this Pub/Sub?",
   "console.components.pubsub-form.messages.replacePubsub": "Replace Pub/Sub",
+  "console.components.pubsub-form.messages.useSecureConnection": "Use secure connection",
   "console.components.rights-group.index.selectAll": "Select all",
   "console.components.rights-group.index.outOfOwnScopeRights": "This {entityType} has more rights than you have. These rights can not be modified.",
   "console.components.rights-group.index.outOfOwnScopePseudoRight": "This {entityType} has a wildcard right that you don't have. The {entityType} can therefore only be removed entirely.",
@@ -180,7 +180,7 @@
   "console.components.webhook-form.index.messageInfo": "For each enabled message type, an optional path can be defined which will be appended to the base URL",
   "console.components.webhook-form.index.deleteWebhook": "Delete Webhook",
   "console.components.webhook-form.index.modalWarning": "Are you sure you want to delete webhook \"{webhookId}\"? Deleting a webhook cannot be undone.",
-  "console.components.webhook-form.index.headers": "Headers",
+  "console.components.webhook-form.index.additionalHeaders": "Additional headers",
   "console.components.webhook-form.index.headersKeyPlaceholder": "Authorization",
   "console.components.webhook-form.index.headersValuePlaceholder": "Bearer my-auth-token",
   "console.components.webhook-form.index.headersAdd": "Add header entry",
@@ -188,6 +188,8 @@
   "console.components.webhook-form.index.downlinkAPIKey": "Downlink API key",
   "console.components.webhook-form.index.downlinkAPIKeyDesc": "The API key will be provided to the endpoint using the \"X-Downlink-Apikey\" header",
   "console.components.webhook-form.index.templateInformation": "Template information",
+  "console.components.webhook-form.index.enabledMessages": "Enabled messages",
+  "console.components.webhook-form.index.endpointSettings": "Endpoint settings",
   "console.components.webhook-template-form.index.createTemplate": "Create {template} webhook",
   "console.components.webhook-template-form.index.idPlaceholder": "my-new-{templateId}-webhook",
   "console.components.webhook-template-form.index.templateSettings": "Template settings",
