--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -51,14 +51,13 @@
   "console.components.device-import-form.index.createDevices": "Xxxxxx xxx xxxxxxx",
   "console.components.device-import-form.index.selectAFile": "Xxxxxx xxxxxx x xxxxxxxx xxxx",
   "console.components.device-import-form.index.fileInfoPlaceholder": "Xxxxxx xxxxxx x xxxxxxxx xxxxxx",
-  "console.components.device-import-form.index.claimAuthCode": "Xxx xxxxx xxxxxxxxxxxxxx xxxx",
+  "console.components.device-import-form.index.claiming": "Xxxxxxxx",
+  "console.components.device-import-form.index.setClaimAuthCode": "Xxx xxxxx xxxxxxxxxxxxxx xxxx",
   "console.components.device-import-form.index.targetedComponents": "Xxxxxxxx xxxxxxxxxx",
   "console.components.downlink-form.downlink-form.insertMode": "Xxxxxx Xxxx",
-  "console.components.downlink-form.downlink-form.insertModeDescription": "Xxxxxxxx xxx xxxxxx xxxxxxx xxx xxxxxxxx xxxxx xx xxxxxx xx xx",
-  "console.components.downlink-form.downlink-form.replace": "Xxxxxxx",
-  "console.components.downlink-form.downlink-form.push": "Xxxx",
-  "console.components.downlink-form.downlink-form.confirmation": "Xxxxxxxxxxxx",
-  "console.components.downlink-form.downlink-form.confirmed": "Xxxxxxxxx",
+  "console.components.downlink-form.downlink-form.replace": "Xxxxxxx xxxxxxxx xxxxx",
+  "console.components.downlink-form.downlink-form.push": "Xxxx xx xxxxxxxx xxxxx (xxxxxx)",
+  "console.components.downlink-form.downlink-form.confirmedDownlink": "Xxxxxxxxx xxxxxxxx",
   "console.components.downlink-form.downlink-form.scheduleDownlink": "Xxxxxxxx xxxxxxxx",
   "console.components.downlink-form.downlink-form.downlinkSuccess": "Xxxxxxxx xxxxxxxxx",
   "console.components.downlink-form.downlink-form.payloadDescription": "Xxx xxxxxxx xxxxxxx xxxxx xx xxx xxxxxxxx xxxxxxx",
@@ -156,6 +155,7 @@
   "console.components.pubsub-form.messages.alreadyExistsModalTitle": "XX xxxxxxx xxxxxx",
   "console.components.pubsub-form.messages.alreadyExistsModalMessage": "X Xxx/Xxx xxxx xxx XX \"{id}\" xxxxxxx xxxxxx. Xx xxx xxxx xx xxxxxxx xxxx Xxx/Xxx?",
   "console.components.pubsub-form.messages.replacePubsub": "Xxxxxxx Xxx/Xxx",
+  "console.components.pubsub-form.messages.useSecureConnection": "Xxx xxxxxx xxxxxxxxxx",
   "console.components.rights-group.index.selectAll": "Xxxxxx xxx",
   "console.components.rights-group.index.outOfOwnScopeRights": "Xxxx {entityType} xxx xxxx xxxxxx xxxx xxx xxxx. Xxxxx xxxxxx xxx xxx xx xxxxxxxx.",
   "console.components.rights-group.index.outOfOwnScopePseudoRight": "Xxxx {entityType} xxx x xxxxxxxx xxxxx xxxx xxx xxx'x xxxx. Xxx {entityType} xxx xxxxxxxxx xxxx xx xxxxxxx xxxxxxxx.",
@@ -180,7 +180,7 @@
   "console.components.webhook-form.index.messageInfo": "Xxx xxxx xxxxxxx xxxxxxx xxxx, xx xxxxxxxx xxxx xxx xx xxxxxxx xxxxx xxxx xx xxxxxxxx xx xxx xxxx XXX",
   "console.components.webhook-form.index.deleteWebhook": "Xxxxxx Xxxxxxx",
   "console.components.webhook-form.index.modalWarning": "Xxx xxx xxxx xxx xxxx xx xxxxxx xxxxxxx \"{webhookId}\"? Xxxxxxxx x xxxxxxx xxxxxx xx xxxxxx.",
-  "console.components.webhook-form.index.headers": "Xxxxxxx",
+  "console.components.webhook-form.index.additionalHeaders": "Xxxxxxxxxx xxxxxxx",
   "console.components.webhook-form.index.headersKeyPlaceholder": "Xxxxxxxxxxxxx",
   "console.components.webhook-form.index.headersValuePlaceholder": "Xxxxxx xx-xxxx-xxxxx",
   "console.components.webhook-form.index.headersAdd": "Xxx xxxxxx xxxxx",
@@ -188,6 +188,8 @@
   "console.components.webhook-form.index.downlinkAPIKey": "Xxxxxxxx XXX xxx",
   "console.components.webhook-form.index.downlinkAPIKeyDesc": "Xxx XXX xxx xxxx xx xxxxxxxx xx xxx xxxxxxxx xxxxx xxx \"X-Xxxxxxxx-Xxxxxx\" xxxxxx",
   "console.components.webhook-form.index.templateInformation": "Xxxxxxxx xxxxxxxxxxx",
+  "console.components.webhook-form.index.enabledMessages": "Xxxxxxx xxxxxxxx",
+  "console.components.webhook-form.index.endpointSettings": "Xxxxxxxx xxxxxxxx",
   "console.components.webhook-template-form.index.createTemplate": "Xxxxxx {template} xxxxxxx",
   "console.components.webhook-template-form.index.idPlaceholder": "xx-xxx-{templateId}-xxxxxxx",
   "console.components.webhook-template-form.index.templateSettings": "Xxxxxxxx xxxxxxxx",
