--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -226,6 +226,7 @@
   "console.containers.gateway-location-form.gateway-location-form.publishLocation": "Xxxxxxx xxxxxxxx",
   "console.containers.gateways-table.index.ownedTabTitle": "Xxxxx xxxxxxxx",
   "console.containers.lora-cloud-form.index.token": "Xxxxx",
+  "console.containers.lora-cloud-form.index.lr1110Encoding": "XXxxxx xxxx xxxxxxxx",
   "console.containers.lora-cloud-form.index.setLoRaCloudToken": "Xxx XxXx Xxxxx xxxxx",
   "console.containers.lora-cloud-form.index.deleteToken": "Xxxxxx xxxxx",
   "console.containers.lora-cloud-form.index.deleteWarning": "Xxx xxx xxxx xxx xxxx xx xxxxxx xxx xxxxxxx xxxxx? Xxxx xxxxxx xxxxxx xx xxxxxx.",
