console: Add application location preview

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -443,6 +443,7 @@
   "lib.shared-messages.16Bit": "16 bit",
   "lib.shared-messages.32Bit": "32 bit",
   "lib.shared-messages.abp": "Activation by personalization (ABP)",
+  "lib.shared-messages.accuracy": "Accuracy",
   "lib.shared-messages.activationMode": "Activation mode",
   "lib.shared-messages.add": "Add",
   "lib.shared-messages.addApiKey": "Add API key",
@@ -714,6 +715,7 @@
   "lib.shared-messages.skipCryptoTitle": "Skip payload encryption and decryption",
   "lib.shared-messages.sNwkSIKey": "SNwkSIntKey",
   "lib.shared-messages.sNwkSIKeyDescription": "Serving network session integrity key",
+  "lib.shared-messages.source": "Source",
   "lib.shared-messages.stable": "Stable",
   "lib.shared-messages.state": "State",
   "lib.shared-messages.stateApproved": "Approved",
