--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -443,6 +443,7 @@
   "lib.shared-messages.16Bit": "xx xxx",
   "lib.shared-messages.32Bit": "xx xxx",
   "lib.shared-messages.abp": "Xxxxxxxxxx xx xxxxxxxxxxxxxxx (XXX)",
+  "lib.shared-messages.accuracy": "Xxxxxxxx",
   "lib.shared-messages.activationMode": "Xxxxxxxxxx xxxx",
   "lib.shared-messages.add": "Xxx",
   "lib.shared-messages.addApiKey": "Xxx XXX xxx",
@@ -714,6 +715,7 @@
   "lib.shared-messages.skipCryptoTitle": "Xxxx xxxxxxx xxxxxxxxxx xxx xxxxxxxxxx",
   "lib.shared-messages.sNwkSIKey": "XXxxXXxxXxx",
   "lib.shared-messages.sNwkSIKeyDescription": "Xxxxxxx xxxxxxx xxxxxxx xxxxxxxxx xxx",
+  "lib.shared-messages.source": "Xxxxxx",
   "lib.shared-messages.stable": "Xxxxxx",
   "lib.shared-messages.state": "Xxxxx",
   "lib.shared-messages.stateApproved": "Xxxxxxxx",
