dev: Update locales

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -23,9 +23,8 @@
   "account.views.create-account.index.registrationPending": "You have successfully sent the registration request. You will receive a confirmation once the account has been approved.",
   "account.views.forgot-password.index.forgotPassword": "Forgot password",
   "account.views.forgot-password.index.passwordRequested": "An email with reset instruction was sent to the email address associated with your username. Please check your spam folder as well.",
-  "account.views.forgot-password.index.goToLogin": "Go to login",
   "account.views.forgot-password.index.send": "Send",
-  "account.views.forgot-password.index.requestTempPassword": "Reset password",
+  "account.views.forgot-password.index.resetPassword": "Reset password",
   "account.views.forgot-password.index.resetPasswordDescription": "Please enter your User ID to receive an email with reset instructions",
   "account.views.front-not-found.index.backToAccount": "Back to {siteTitle}",
   "account.views.login.index.createAccount": "Create an account",
