--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -23,9 +23,8 @@
   "account.views.create-account.index.registrationPending": "Xxx xxxx xxxxxxxxxxxx xxxx xxx xxxxxxxxxxxx xxxxxxx. Xxx xxxx xxxxxxx x xxxxxxxxxxxx xxxx xxx xxxxxxx xxx xxxx xxxxxxxx.",
   "account.views.forgot-password.index.forgotPassword": "Xxxxxx xxxxxxxx",
   "account.views.forgot-password.index.passwordRequested": "Xx xxxxx xxxx xxxxx xxxxxxxxxxx xxx xxxx xx xxx xxxxx xxxxxxx xxxxxxxxxx xxxx xxxx xxxxxxxx. Xxxxxx xxxxx xxxx xxxx xxxxxx xx xxxx.",
-  "account.views.forgot-password.index.goToLogin": "Xx xx xxxxx",
   "account.views.forgot-password.index.send": "Xxxx",
-  "account.views.forgot-password.index.requestTempPassword": "Xxxxx xxxxxxxx",
+  "account.views.forgot-password.index.resetPassword": "Xxxxx xxxxxxxx",
   "account.views.forgot-password.index.resetPasswordDescription": "Xxxxxx xxxxx xxxx Xxxx XX xx xxxxxxx xx xxxxx xxxx xxxxx xxxxxxxxxxxx",
   "account.views.front-not-found.index.backToAccount": "Xxxx xx {siteTitle}",
   "account.views.login.index.createAccount": "Xxxxxx xx xxxxxxx",
